--- a/src/main/resources/config/application-heroku.yml
+++ b/src/main/resources/config/application-heroku.yml
@@ -19,9 +19,9 @@ eureka:
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: ${JDBC_DATABASE_URL}
-    username: ${JDBC_DATABASE_USERNAME}
-    password: ${JDBC_DATABASE_PASSWORD}
+    url: jdbc:postgresql://ep-tight-pond-a1243jsz-pooler.ap-southeast-1.aws.neon.tech:5432/itss
+    username: itss_owner
+    password: AS1hsYg0xWMc
     hikari:
       maximumPoolSize: 8
 server:
